<resources>
    <string name="app_name">KEA-Bank</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="on_create">onCreate() called</string>
    <string name="onClick">onClick() called</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="retype_password">Retype Password</string>
    <string name="invalid_login">Invalid login</string>
    <string name="user_exists">userExists() called</string>
    <string name="fetch_user">fetchUser() called</string>
    <string name="save_user">saveUser() called</string>
    <string name="password_match">passwordMatch() called</string>
    <string name="handle_login">handleLogin() called</string>
    <string name="invalid_password_string">Invalid Password.</string>
    <string name="CREDENTIALS_KEY">CREDENTIALS</string>
    <string name="user_exists_msg">User with this email already exists.</string>
    <string name="passwords_mismatch">Passwords do not match.</string>
    <string name="NEW_USER_KEY">NEW_USER</string>
    <string name="user_does_not_exist">User doesn\'t exists.</string>
    <string name="fill_out_field">You must fill out this field.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="something_wrong">Something went wrong. Did you hit back by accident?</string>
    <string name="login_clicked_btn">Log in button clicked</string>
    <string name="sign_up_clicked_btn">sign up button clicked</string>
    <string name="enter_key">Enter key</string>
    <string name="dialog_login">LOGIN</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="reset_password">Reset Password</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="dialog_inflater">dialogInflater() called</string>
    <string name="on_activity_result">onActivityResult() called</string>
    <string name="caps_cancel">CANCEL</string>
    <string name="caps_login">LOGIN</string>
    <string name="must_be_18">Must be 18 years old.</string>
    <string name="invalid_key">Invalid Key Entered. Try again.</string>
    <string name="business_news_feed">Business News Feed</string>
    <string name="loading_rss">Loading rss feed...</string>
    <string name="existing_user">EXISTING_USER</string>
    <string name="default_account">Default Account:</string>
    <string name="budget_account">Budget Account:</string>
    <string name="business_account">Business Account:</string>
    <string name="pension_account">Pension Account:</string>
    <string name="savings_account">Savings Account:</string>
    <string name="balance">Balance:</string>
    <string name="init">init() called</string>
    <string name="outstanding_bills">Outstanding Bills</string>
    <string name="add_bill">Add Bill</string>
    <string name="updated_user">UPDATED_USER</string>
    <string name="pay_automatically">Pay Automatically</string>
    <string name="ok">OK</string>

    <array name="spinner_coiches">
        <item>DefaultAccount</item>
        <item>BudgetAccount</item>
        <item>BusinessAccount</item>
        <item>PensionAccount</item>
        <item>SavingsAccount</item>
    </array>
</resources>
