<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.BillsActivity">

    <TextView
        android:id="@+id/outstandingBills"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/outstanding_bills"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24dp" />

    <ListView
        android:id="@+id/billsList"
        android:layout_width="match_parent"
        android:layout_height="327dp" />

    <Button
        android:id="@+id/addBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corner"
        android:onClick="onClick"
        android:text="@string/add_bill" />

    <Button
        android:id="@+id/payAutomatically"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corner"
        android:onClick="onClick"
        android:text="@string/pay_automatically"/>
</LinearLayout>

